fixed horizontal overflow bug

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -7,6 +7,7 @@
 	-webkit-font-smoothing: antialiased;
 	font-family: $font-whitney;
 	color: $ubc-blue;
+	overflow-x: hidden;
 
 	h1 {
 		font-size: 2.25rem;
